--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 .idea
 
 # compile package
+production
 out
 target
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
